--- a/index.html
+++ b/index.html
@@ -3,88 +3,112 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mayank Khera | AI & Data Engineer</title>
+  <title>Mayank Khera | Data Scientist & AI Engineer</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-900 font-sans leading-relaxed">
-  <header class="bg-white shadow p-6">
-    <div class="max-w-5xl mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Mayank Khera</h1>
-      <div class="space-x-4">
-        <a href="mailto:mayankkhera06@gmail.com" class="text-blue-600">Email</a>
-        <a href="https://github.com/LAyZeeY" target="_blank" class="text-blue-600">GitHub</a>
-        <a href="https://linkedin.com/in/mayank-khera-236216b1" target="_blank" class="text-blue-600">LinkedIn</a>
-      </div>
+<body class="bg-gray-100 text-gray-800">
+  <header class="bg-white shadow-md sticky top-0 z-50">
+    <div class="max-w-6xl mx-auto flex justify-between items-center px-6 py-4">
+      <h1 class="text-xl font-bold">Mayank Khera</h1>
+      <nav class="space-x-4 text-sm">
+        <a href="#about" class="hover:text-blue-600">About</a>
+        <a href="#skills" class="hover:text-blue-600">Skills</a>
+        <a href="#projects" class="hover:text-blue-600">Projects</a>
+        <a href="#experience" class="hover:text-blue-600">Experience</a>
+        <a href="#education" class="hover:text-blue-600">Education</a>
+        <a href="#contact" class="hover:text-blue-600">Contact</a>
+      </nav>
     </div>
   </header>
 
-  <main class="max-w-5xl mx-auto p-6">
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-2">About Me</h2>
-      <p>
-        I’m a passionate Data Scientist and ML Engineer aiming to leverage my expertise in AI, Generative AI, and Data Engineering to build cutting-edge solutions. I thrive on transforming complex datasets into intelligent, impactful systems.
-      </p>
+  <main class="max-w-6xl mx-auto px-6 py-12 space-y-12">
+    <section id="about">
+      <h2 class="text-2xl font-semibold mb-2">About Me</h2>
+      <p class="text-lg leading-relaxed">I am an aspiring Data Scientist and AI/ML Engineer with expertise in Generative AI, Machine Learning, and Data Engineering. Passionate about transforming data into actionable insights, I aim to design AI-driven solutions that enhance business decisions, automate processes, and drive innovation.</p>
     </section>
 
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-2">Skills</h2>
-      <ul class="grid grid-cols-2 md:grid-cols-3 gap-2 list-disc list-inside">
-        <li>Python, R, SQL</li>
-        <li>TensorFlow, PyTorch</li>
-        <li>Transformers, LangChain</li>
-        <li>Pandas, NumPy</li>
-        <li>Power BI, Tableau</li>
-        <li>Spacy, Hugging Face</li>
-        <li>AWS, GCP, Azure</li>
-        <li>Prompt Engineering (RAG)</li>
-      </ul>
+    <section id="skills">
+      <h2 class="text-2xl font-semibold mb-4">Skills & Tools</h2>
+      <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
+        <ul class="list-disc list-inside">
+          <li>Python, R, SQL</li>
+          <li>Pandas, NumPy</li>
+          <li>Matplotlib, Seaborn, Tableau, Power BI</li>
+        </ul>
+        <ul class="list-disc list-inside">
+          <li>TensorFlow, PyTorch, Keras</li>
+          <li>LangChain, Hugging Face, Spacy</li>
+          <li>OpenCV, CNN, LSTM</li>
+        </ul>
+        <ul class="list-disc list-inside">
+          <li>AWS SageMaker, GCP Vertex AI, Azure ML Studio</li>
+          <li>Prompt Engineering, RAG</li>
+          <li>Critical Thinking, Communication</li>
+        </ul>
+      </div>
     </section>
 
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-2">Experience</h2>
-      <div>
-        <h3 class="font-bold">Skuad (Payoneer) – Payroll Data Analyst</h3>
+    <section id="projects">
+      <h2 class="text-2xl font-semibold mb-4">Projects</h2>
+      <div class="space-y-4">
+        <div><strong>AI Chatbot:</strong> Built with Streamlit & NLP embeddings for dynamic question-answering over website data.</div>
+        <div><strong>VotingClassifier:</strong> Ensemble of bagging, boosting, and stacking to improve accuracy.</div>
+        <div><strong>ResNet-50 Model:</strong> Pretrained deep learning model for image classification.</div>
+        <div><strong>Bi-LSTM Sentiment Analyzer:</strong> Classifies textual reviews into sentiment categories.</div>
+        <div><strong>PDF RAG System:</strong> Streamlit app to extract answers from uploaded documents.</div>
+        <div><strong>License Plate Recognition:</strong> CNN-based solution to detect and read plates from images.</div>
+      </div>
+    </section>
+
+    <section id="experience">
+      <h2 class="text-2xl font-semibold mb-4">Work Experience</h2>
+      <div class="mb-4">
+        <h3 class="font-bold">Payroll Data Analyst – Skuad (Payoneer)</h3>
         <p class="text-sm text-gray-600">Aug 2023 – Present</p>
-        <ul class="list-disc list-inside">
-          <li>Automated payroll analysis for 300+ employees</li>
-          <li>Reduced discrepancies by 20% through audits</li>
-          <li>Delivered insights to HR & Finance via reports</li>
+        <ul class="list-disc list-inside text-sm">
+          <li>Processed payroll for 300+ employees ensuring 100% compliance.</li>
+          <li>Reduced discrepancies by 20% via audits and optimizations.</li>
+          <li>Automated workflows and collaborated with HR/Finance.</li>
         </ul>
       </div>
-      <div class="mt-4">
-        <h3 class="font-bold">HDFC Bank – Relationship Manager</h3>
+      <div>
+        <h3 class="font-bold">Relationship Manager – HDFC Bank</h3>
         <p class="text-sm text-gray-600">Sept 2021 – Jun 2023</p>
-        <ul class="list-disc list-inside">
-          <li>Analyzed financial data for 200+ clients</li>
-          <li>Optimized investments, increasing revenue by 10%</li>
+        <ul class="list-disc list-inside text-sm">
+          <li>Managed high-value client portfolios using data insights.</li>
+          <li>Improved portfolio ROI by 15% through analytics.</li>
+          <li>Implemented risk assessments and process improvements.</li>
         </ul>
       </div>
     </section>
 
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-2">Projects</h2>
-      <ul class="list-disc list-inside">
-        <li>🔍 AI Chatbot using NLP + Streamlit</li>
-        <li>🧠 VotingClassifier for ensemble learning</li>
-        <li>📷 ResNet-50 for image classification</li>
-        <li>💬 Bi-LSTM for sentiment analysis</li>
-        <li>📄 PDF RAG search engine with Streamlit</li>
-        <li>🚘 License Plate Recognition with CNN</li>
+    <section id="education">
+      <h2 class="text-2xl font-semibold mb-4">Education</h2>
+      <ul class="list-disc list-inside text-sm">
+        <li>IIT Guwahati – Applied Data Science, ML & IoT (2024–2025)</li>
+        <li>MBA in Finance – Manipal Academy (GPA: 9.38)</li>
+        <li>Post Diploma in Banking & Finance – Manipal (GPA: 9.84)</li>
+        <li>B.Tech in IT – GGSIPU, Delhi (2012–2016)</li>
       </ul>
     </section>
 
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-2">Education</h2>
-      <ul class="list-disc list-inside">
-        <li>IIT Guwahati – Adv. Cert. in Data Science & AI (2024–2025)</li>
-        <li>MBA – Manipal Academy (2023–2024, GPA 9.38)</li>
-        <li>B.Tech – GGSIPU (2012–2016)</li>
-      </ul>
+    <section id="contact">
+      <h2 class="text-2xl font-semibold mb-4">Contact</h2>
+      <p>Email: <a href="mailto:mayankkhera06@gmail.com" class="text-blue-600">mayankkhera06@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/LAyZeeY" class="text-blue-600" target="_blank">github.com/LAyZeeY</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/mayank-khera-236216b1" class="text-blue-600" target="_blank">linkedin.com/in/mayank-khera</a></p>
     </section>
   </main>
 
-  <footer class="text-center p-4 text-sm text-gray-500">
-    © 2025 Mayank Khera | Built with 💡 & Tailwind CSS
+  <footer class="bg-white text-center text-sm text-gray-500 py-4">
+    © 2025 Mayank Khera | Data Scientist & AI Engineer
   </footer>
 </body>
 </html>
